[package]
name = "eat-nom"
version = "0.1.0"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
description = "A tools about normal domain extend use nom"
license = "MIT"
repository = "https://github.com/baoyachi/eat-nom.git"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
ipnetwork = "0.16.0"