[package]
name = "eat-nom"
version = "0.1.5"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
description = "A tools about normal domain extend use nom"
license = "MIT"
repository = "https://github.com/baoyachi/eat-nom.git"
readme = "README.md"
edition = "2018"
keywords = ["parser", "parsing", "ipmask","iprange","port"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0-alpha1"